--- a/public/css/carousel.css
+++ b/public/css/carousel.css
@@ -58,6 +58,13 @@ body {
   height: 500px;
 }
 
+.btn-lg,
+.btn-group-lg > .btn {
+  padding: 10px 16px;
+  font-size: 40px;
+  line-height: 1.33;
+  border-radius: 6px;
+}
 
 
 /* MARKETING CONTENT
@@ -89,6 +96,9 @@ body {
 .featurette-divider {
   margin: 80px 0; /* Space out the Bootstrap <hr> more */
 }
+.featurette-spacer {
+  margin: 40px 0; /* Space out the Bootstrap <hr> more */
+}
 
 /* Thin out the marketing headings */
 .featurette-heading {
@@ -97,6 +107,11 @@ body {
   letter-spacing: -1px;
 }
 
+/* Thin out the marketing headings */
+.featuretteH {
+  font-weight: 300;
+  letter-spacing: -1px;
+}
 
 
 /* RESPONSIVE CSS
@@ -142,6 +157,6 @@ body {
 
 @media (min-width: 992px) {
   .featurette-heading {
-    margin-top: 120px;
+    margin-top: 10px;
   }
 }
